--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -42,23 +42,19 @@ jobs:
           plugin_languages_analysis_timeout_repositories: 7.5
           plugin_languages_categories: markup, programming
           plugin_languages_colors: github
+          plugin_languages_ignored: Makefile, SCSS
           plugin_languages_limit: 8
           plugin_languages_recent_categories: markup, programming
           plugin_languages_recent_days: 14
           plugin_languages_recent_load: 300
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
-          plugin_leetcode: yes
-          plugin_leetcode_limit_recent: 2
-          plugin_leetcode_limit_skills: 10
-          plugin_leetcode_sections: solved
-          plugin_leetcode_user: StandardL
           plugin_music: yes
-          plugin_music_limit: 4
-          plugin_music_mode: playlist
+          plugin_music_limit: 5
+          plugin_music_mode: recent
           plugin_music_playlist: https://embed.music.apple.com/tr/playlist/%E7%B2%A4%E8%AF%AD%E5%8A%B2%E6%AD%8C/pl.u-GgA5kAghoG9N1oo
           plugin_music_provider: apple
-          plugin_music_time_range: short
+          plugin_music_time_range: medium
           plugin_music_top_type: tracks
           plugin_music_user: Pleiades_L
           plugin_projects: yes
