--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -51,7 +51,7 @@ jobs:
           plugin_languages_threshold: 0%
           plugin_music: yes
           plugin_music_limit: 5
-          plugin_music_mode: recent
+          plugin_music_mode: top
           plugin_music_playlist: https://embed.music.apple.com/tr/playlist/%E7%B2%A4%E8%AF%AD%E5%8A%B2%E6%AD%8C/pl.u-GgA5kAghoG9N1oo
           plugin_music_provider: apple
           plugin_music_time_range: medium
